# Servidor_sensores

./: .gitignore  Cargo.toml  README.md  datos.csv  registro_led.json
client/: BH1750.py  boton.py  boton_py.py  cliente_iot.py  dht.py  launcher.py  pyproject.toml  registro_led.json
public/: index.html
public/css/: styles.css
public/js/: app.js
public/js/graficas/: app.js  basica.js  default.js  luminosidad  pulsacion.js  registro.js
src/: main.rs  server.rs
src/data/: datos.csv
src/tui/: app.rs  mod.rs  render.rs
src/tui/data/: datos.csv
src/tui/windows/: config.json  dashboard.rs  mod.rs  sensores.rs
src/tui/windows/data/: datos.csv
